# Safepress

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baselines_deepseek_3bit.yaml  baselines_gemma2_3bit.yaml  baselines_glm4_3bit.yaml  baselines_llama31_3bit.yaml  baselines_mistral_3bit.yaml  baselines_qwen3_3bit.yaml  experiment_causal.yaml  experiment_phase.yaml  experiment_sweep.yaml  fisher60_deepseek_3bit.yaml  fisher60_glm4_3bit.yaml  fisher60_glm4_4bit.yaml  fisher60_llama31_3bit.yaml  fisher60_llama31_4bit.yaml  fisher60_mistral_3bit.yaml  fisher60_qwen3_3bit.yaml  fisher60_qwen3_4bit.yaml  fisher60_qwen3_4bit_remaining.yaml  g2_pilot_deepseek_3bit.yaml  g2_pilot_gemma2_3bit.yaml  g2_pilot_glm4_3bit.yaml  g2_pilot_llama31_3bit.yaml  g2_pilot_llama31_3bit_seeds12.yaml  g2_pilot_mistral_3bit.yaml  g2_pilot_mistral_3bit_seed0.yaml  g2_pilot_qwen3_3bit.yaml  g2_pilot_qwen3_3bit_hbcls.yaml  g2_pilot_qwen3_3bit_seeds12.yaml  models.yaml  paper_emnlp.yaml  paper_emnlp_3bit.yaml  paper_emnlp_llama31.yaml  paper_sweep.yaml  paper_sweep_llama31.yaml  ssmp_bnb4.yaml
safepress/: __main__.py  cli.py
scripts/: attack_xstest_eval_from_protect_maps.py  check_remaining.sh  classify_existing_responses.py  compute_confidence_intervals.py  dump_block_scores.py  experiment_3bit_ssmp.py  fix_missing_8bit.py  fix_missing_8bit.sh  fix_phi35_8bit.py  g2_paired_stats.py  generate_comprehensive_figures.py  generate_figures.py  generate_g1_figure.py  generate_paper_figures.py  generate_summary_tables.py  generate_tables.py  prepare_data.py  prepare_utility_prompts.py  rescore_strongreject.py  retry_qwen3_fisher60.sh  run_2gpu_deepseek_steal.sh  (+29 more)
(+46 files in other folders)
