[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safepress"
version = "0.1.0"
description = "Safety-preserving mixed-precision quantization research toolkit (small LLMs/agents)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Lab"}]

dependencies = [
  "torch",
  "transformers>=4.41.0",
  "accelerate>=0.30.0",
  "datasets>=2.18.0",
  "tqdm",
  "pyyaml",
  "numpy",
  "pandas",
  "scipy",  # used by safepress/analysis/layer_analysis.py for SVD / numerics
]

[project.optional-dependencies]
bnb = ["bitsandbytes>=0.43.0"]
awq = ["autoawq>=0.2.0"]
gptq = ["auto-gptq>=0.7.0", "optimum>=1.16.0"]
agent = ["agentdojo>=0.1.30", "openai>=1.0.0"]
strongreject = ["strong_reject @ git+https://github.com/dsbowen/strong_reject.git@main"]
viz = ["matplotlib>=3.7.0", "seaborn>=0.12.0"]
eval = ["jailbreakbench>=0.1.0"]
peft = ["peft>=0.10.0"]   # required for Q-resafe DPO baseline
dev = ["pytest>=7.0.0"]   # required for the test suite (incl. tests/test_stats.py)
all = [
  "bitsandbytes>=0.43.0",
  "autoawq>=0.2.0",
  "auto-gptq>=0.7.0",
  "optimum>=1.16.0",
  "agentdojo>=0.1.30",
  "openai>=1.0.0",
  "strong_reject @ git+https://github.com/dsbowen/strong_reject.git@main",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "jailbreakbench>=0.1.0",
  "peft>=0.10.0",
  "pytest>=7.0.0",
]

[project.scripts]
safepress = "safepress.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["safepress*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
